[project]
name = "streamlit-data-visualization-eurovision"
version = "0.1.0"
description = "Eurovision Song Contest data visualization with Streamlit (Polars and Pandas versions)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.0",
    "polars>=1.35.2",
    "streamlit>=1.51.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
